--- a/styles.css
+++ b/styles.css
@@ -788,7 +788,7 @@ body {
     position: relative;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 0 0 2rem;
 }
 
